--- a/typescript/simple-mercari-web/src/App.css
+++ b/typescript/simple-mercari-web/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .Title {
-  background-color: #222427;
+  background-color: #eb0b0b;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
@@ -13,8 +13,14 @@
   color: white;
 }
 
+.ItemListContainer{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+}
+
 .Listing {
-  background-color: #222427;
+  background-color: #222472;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
@@ -25,14 +31,15 @@
 }
 
 .ItemList {
-  background-color: #222427;
+  background-color: #f9f9f9;
   min-height: 8vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: left;
   font-size: calc(10px + 1vmin);
-  color: white;
+  color: black;
+  padding:16px;
 }
 
 .App-link {
